--- a/src/packaging/netcoreapp/project.json
+++ b/src/packaging/netcoreapp/project.json
@@ -2,14 +2,10 @@
   "frameworks": {
     "netcoreapp2.0": {
       "dependencies": {
-        "Microsoft.NETCore.App": "2.0.0-beta-001663-00",
+        "Microsoft.Private.CoreFx.NETCoreApp": "4.4.0-preview1-25210-01",
 
-        "System.Threading": "4.4.0-beta-24913-02",
-        "System.Linq": "4.4.0-beta-24913-02",
-        "System.Runtime.InteropServices": "4.4.0-beta-24913-02",
-        "System.Runtime.CompilerServices.Unsafe": "4.4.0-beta-24913-02",
+        "System.Runtime.CompilerServices.Unsafe": "4.4.0-preview1-25210-01",
 
-        "runtime.native.System": "4.4.0-beta-24913-02",
         "Microsoft.NETCore.Native": "2.0.0-beta-25021-03"
       }
     }
