--- a/src/packaging/uap/project.json
+++ b/src/packaging/uap/project.json
@@ -2,12 +2,12 @@
   "frameworks": {
     "uap10.1": {
       "dependencies": {
-        "runtime.win7-x64-aot.Microsoft.Private.CoreFx.UAP": "4.4.0-beta-25107-03"
+        "runtime.win10-x64-aot.Microsoft.Private.CoreFx.UAP": "4.4.0-preview1-25210-01"
       }
     }
   },
 
   "runtimes": {
-    "win7-aot": {},
+    "win10-x64-aot": {},
   }
 }
