Add CoreRT support for 8 remaining System.Text.Encoding APIs
     The APIs are:
     BodyName
     GetEncodings()
     HeaderName
     IsBrowserDisplay
     IsBrowserSave
     IsMailNewsDisplay
     IsMailNewsSave
     WindowsCodePage

     These APIs in CoreCLR had native callbacks to access the tables containing encoding and codepage information, at least on Windows. This new CoreRT implementation is based on a mix of the CoreCLR Unix implementation (since it doesn't have native callbacks but is otherwise functionally similar) and the old System.Text.EncodingTable/EncodingData which already existed in CoreRT. The main changes  are that (1) this implementation does not use ConcurrentDictionary or Hashtable, since they are not available on CoreRT, instead using ConcurrentUnifier, and (2) this implementation does not try to find resource strings for EncodingName, because ProjectN does not support this yet. Instead, this implementation will retrieve a hard-coded English name for each code page.

[tfs-changeset: 1654411]

--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -194,6 +194,7 @@
     <Compile Include="System\Resources\UnmanagedMemoryStreamWrapper.cs" />
     <Compile Include="System\Resources\StreamExtensions.cs" Condition="'$(IsProjectNLibrary)' != 'true'" />
     <Compile Include="System\Runtime\InteropServices\CriticalHandle.cs" />
+    <Compile Include="System\Text\CodePageDataItem.cs" />
     <Compile Include="System\__Canon.cs" />
     <Compile Include="System\AccessViolationException.cs" />
     <Compile Include="System\Activator.cs" />
@@ -381,7 +382,7 @@
     <Compile Include="System\Text\EncodingData.cs" />
     <Compile Include="System\Text\EncodingTable.cs" />
     <Compile Include="System\Text\Latin1Encoding.cs" />
-    <Compile Include="System\Text\StringBuilder.CoreRT.cs"/>
+    <Compile Include="System\Text\StringBuilder.CoreRT.cs" />
     <Compile Include="System\Text\StringBuilderCache.cs" />
     <Compile Include="System\Text\UTF7Encoding.cs" />
     <Compile Include="System\Threading\CancellationToken.cs" />
